Second initial commit.

--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
-  "name": "led-strip",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
-  },
+  "name": "example-create-react-app-express",
+  "version": "1.0.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "babel server.js client/src/shared -d dist",
+    "client": "cd client && yarn start",
+    "server": "yarn build && nodemon dist/server.js",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "color": "^3.1.0",
+    "color-interpolate": "^1.0.4",
+    "dotstar": "^1.0.0",
+    "express": "^4.16.4",
+    "pi-spi": "^1.0.3"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "concurrently": "^4.0.1"
+  }
 }
